use directive for legen

--- a/app/partials/notes.html
+++ b/app/partials/notes.html
@@ -34,23 +34,4 @@
     </tfoot>
   </table>
 
-  <section>
-    <div class="hero-unit">
-      <div class="container">
-        <p align="center">
-         Visits to clinics
-         <span class="badge miceli">Miceli</span>:
-         <span class="badge miceli">C</span>Carbon
-         <span class="badge miceli">Z</span>Zosia
-         <span class="badge miceli">A</span>Aga
-         <span class="badge miceli">R</span>Rocio
-         <span class="badge miceli">S</span>Steven
-         &nbsp;
-         <span class="badge marina">Other</span>:
-         <span class="badge marina">C</span>Carbon
-         <span class="badge marina">Z</span>Zosia
-         <span class="badge marina">S</span>Steven
-        </p>
-      </div>
-    </div>
-  </section>
+  <tc-legend></tc-legend>
