--- a/app/partials/meds.html
+++ b/app/partials/meds.html
@@ -84,30 +84,4 @@
     </tfoot>
   </table>
 
-  <section>
-    <div class="hero-unit">
-      <div class="container">
-        <p>
-         <span class="label label-primary">Zosia observed</span>
-         <span class="label label-default">Zosia did not observe</span>
-         Visits to clinics
-         <span class="badge miceli">Miceli</span>:
-         <span class="badge miceli">C</span>Carbon
-         <span class="badge miceli">Z</span>Zosia
-         <span class="badge miceli">A</span>Aga
-         <span class="badge miceli">R</span>Rocio
-         <span class="badge miceli">S</span>Steven
-         <span class="badge marina">Marina</span>:
-         <span class="badge marina">C</span>Carbon
-         <span class="badge marina">Z</span>Zosia
-         <span class="badge marina">S</span>Steven
-        </p>
-        <p class="alert alert-info">
-         <span class="glyphicon glyphicon-hand-right"></span>
-         Notes for <strong>June 2nd - 5th</strong> as well as <strong>Sept 8th
-           - 13th</strong>: Probably he got some hard-core opiates in the Clinic
-           but we are not sure what he actually got.
-        </p>
-      </div>
-    </div>
-  </section>
+  <tc-legend observers="true" extranotes="true"></tc-legend>
