--- a/app/partials/meds.html
+++ b/app/partials/meds.html
@@ -1,87 +1,31 @@
-  <table class="table table-striped table-hover">
+<table class="table table-striped table-hover">
     <caption> Meds </caption>
-    <thead ng-controller="MedController">
-      <tr>
-          <th style="text-align: right"> Day/Wk </th>
-          <th>        </th>
-          <th style="text-align: center"> Date </th>
-          <th> Clinic </th>
-          <th
-            ng-repeat="med in meds"
-            bs-popover
-            ><span
-              data-container="th"
-              data-original-title="{{med.engl}}"
-              data-placement="top"
-              data-toggle="tooltip"
-              ><button
-                type="button"
-                class="btn btn-default"
-                data-container="th"
-                data-content="<p>{{med.pron}}</p><ul><li><med>{{med.bran}}</med></ul><p>{{med.html}}</p>"
-                data-html="true"
-                data-original-title="<h2><a href='{{med.link}}'>{{med.engl}}</a></h2>"
-                data-placement="bottom"
-                data-toggle="popover"
-                ng-bind="med.name"
-              ></button>
-            </span>
-          </th>
-      </tr>
-    </thead>
+    <thead ng-controller="MedController" tc-medlist="true"></thead>
     <tbody ng-controller="EventsController">
-      <tr
-        ng-repeat="event in events"
-        ng-controller="EventController as E"
-        ng-init="E.init($index, event)"
-        title="{{event.notes}}"
-        >
-          <td ng-include="'partials/days.html'" align="right"></td>
-          <td ng-include="'partials/glyphs.html'"></td>
-          <td ng-bind="event.date" class="event-date"></td>
-          <td ng-include="'partials/clinics.html'"></td>
-          <td ng-show="!E.hasMeds()" colspan="{{E.meds.length}}}" ng-bind-html="event.notes | rawHtml" class="notes"></td>
-          <td ng-show="E.hasMeds()" ng-repeat="i in E.meds_indexes" class="meds">
+        <tr
+          ng-repeat="event in events"
+          ng-controller="EventController as E"
+          ng-init="E.init($index, event)"
+          title="{{event.notes}}"
+          >
+            <td ng-include="'partials/days.html'" align="right"></td>
+            <td ng-include="'partials/glyphs.html'"></td>
+            <td ng-bind="event.date" class="event-date"></td>
+            <td ng-include="'partials/clinics.html'"></td>
+            <td ng-show="!E.hasMeds()" colspan="{{E.meds.length}}}" ng-bind-html="event.notes | rawHtml" class="notes"></td>
+            <td ng-show="E.hasMeds()" ng-repeat="i in E.meds_indexes" class="meds">
             <span ng-show="E.hasDosage(i)" title="{{ E.meds[i].name }}">
-              <span
-                class="label"
-                ng-repeat="dose in E.getMed(i) track by $index"
-                ng-class="{'label-primary':E.observed(i, $index),'label-default':E.unobserved(i, $index)}">
-                  {{E.med(i, dose)}}
-              </span>
+                <span
+                  class="label"
+                  ng-repeat="dose in E.getMed(i) track by $index"
+                  ng-class="{'label-primary':E.observed(i, $index),'label-default':E.unobserved(i, $index)}">
+                    {{E.med(i, dose)}}
+                </span>
             </span>
-          </td>
-      </tr>
+            </td>
+        </tr>
     </tbody>
-    <tfoot ng-controller="MedController">
-      <tr>
-          <th style="text-align: right"> Day/Wk </th>
-          <th>        </th>
-          <th> Date   </th>
-          <th> Clinic </th>
-          <th
-            ng-repeat="med in meds"
-            bs-popover
-            ><span
-              data-container="th"
-              data-original-title="{{med.engl}}"
-              data-placement="top"
-              data-toggle="tooltip"
-              ><button
-                type="button"
-                class="btn btn-default"
-                data-container="th"
-                data-content="<p>{{med.pron}}</p><ul><li><med>{{med.bran}}</med></ul><p>{{med.html}}</p>"
-                data-html="true"
-                data-original-title="<h2><a href='{{med.link}}'>{{med.engl}}</a></h2>"
-                data-placement="top"
-                data-toggle="popover"
-                ng-bind="med.name"
-              ></button>
-            </span>
-          </th>
-      </tr>
-    </tfoot>
-  </table>
+    <tfoot ng-controller="MedController" tc-medlist="true"></tfoot>
+</table>
 
-  <tc-legend observers="true" extranotes="true"></tc-legend>
+<tc-legend observers="true" extranotes="true"></tc-legend>
