adjust page headers

--- a/app/partials/costs.html
+++ b/app/partials/costs.html
@@ -1,6 +1,6 @@
-<div class="data-container">
+<p class="page-header">{{ name }}</p>
 
-  <p class="banner">{{ name }}</p>
+<div class="data-container">
 
   <div class="gridStyle" ng-grid="dataGrid"></div>
 
