--- a/app/partials/meds.html
+++ b/app/partials/meds.html
@@ -1,5 +1,6 @@
+<p class="page-header"> Meds </p>
+
 <table class="table table-striped table-hover">
-    <caption> Meds </caption>
     <thead ng-controller="MedController" tc-medlist="true"></thead>
     <tbody ng-controller="EventsController">
         <tr
