--- a/app/partials/notes.html
+++ b/app/partials/notes.html
@@ -1,5 +1,6 @@
+<p class="page-header"> Notes </p>
+
 <table class="table table-striped table-hover table-notes container">
-    <caption> Notes </caption>
     <thead ng-controller="MedController">
         <tr>
             <th style="text-align: right"> Day/Wk </th>
