--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -1,33 +1,29 @@
-<table class="table table-xrays container">
-    <caption> X-rays </caption>
-    <tbody>
-        <tr>
-            <td>
-                <img class="clickme" title="2014.05.31" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.05.31.jpg">
-                <img class="clickme" title="2014.06.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_1.jpg">
-                <img class="clickme" title="2014.06.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_2.jpg">
-                <img class="clickme" title="2014.06.23" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.23.jpg">
-                <img class="clickme" title="2014.08.01" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.01.jpg">
-                <img class="clickme" title="2014.08.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.20.jpg">
-                <img class="clickme" title="2014.09.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11.jpg">
-                <img class="clickme" title="2014.09.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11_after-op.jpg">
-                <img class="clickme" title="2014.10.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.02.jpg">
-                <img class="clickme" title="2014.10.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11.jpg">
-                <img class="clickme" title="2014.10.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11_side.jpg">
-                <img class="clickme" title="2015.02.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united.jpg">
-                <img class="clickme" title="2015.02.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united_2.jpg">
-                <img class="clickme" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20.jpg">
-                <img class="clickme" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20_.jpg">
-                <img class="clickme" title="2015.05.22" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.05.22.jpg">
-            </td>
-        </tr>
-    </tbody>
-</table>
+<p class="page-header"> X-rays </p>
+
+<div class="xray-images">
+    <img class="clickme" title="2014.05.31" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.05.31.jpg">
+    <img class="clickme" title="2014.06.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_1.jpg">
+    <img class="clickme" title="2014.06.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_2.jpg">
+    <img class="clickme" title="2014.06.23" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.23.jpg">
+    <img class="clickme" title="2014.08.01" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.01.jpg">
+    <img class="clickme" title="2014.08.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.20.jpg">
+    <img class="clickme" title="2014.09.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11.jpg">
+    <img class="clickme" title="2014.09.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11_after-op.jpg">
+    <img class="clickme" title="2014.10.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.02.jpg">
+    <img class="clickme" title="2014.10.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11.jpg">
+    <img class="clickme" title="2014.10.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11_side.jpg">
+    <img class="clickme" title="2015.02.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united.jpg">
+    <img class="clickme" title="2015.02.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united_2.jpg">
+    <img class="clickme" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20.jpg">
+    <img class="clickme" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20_.jpg">
+    <img class="clickme" title="2015.05.22" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.05.22.jpg">
+</div>
 
 <style type="text/css">
-    .table-xrays img {
-        width: 50px;
+    .xray-images img {
+        width: {{ 100 / 17 }}%;
         padding: 5px;
+        text-align: center;
     }
     .modal-title, .modal-body {
         text-align: center;
