--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -19,6 +19,27 @@
     <img class="clickme" title="2015.05.22" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.05.22.jpg">
 </div>
 
+<table class="table table-striped table-hover table-notes container">
+    <thead ng-controller="MedController" tc-col-labels></thead>
+    <tbody ng-controller="EventsController">
+        <tr
+          ng-repeat="event in events"
+          ng-controller="EventController as E"
+          ng-init="E.init($index, event)"
+          ng-show="event.notes | xRay"
+          >
+            <td ng-include="'partials/days.html'" align="right"></td>
+            <td ng-include="'partials/glyphs.html'"></td>
+            <td ng-bind="event.date" class="event-date"></td>
+            <td ng-include="'partials/clinics.html'"></td>
+            <td ng-bind-html="event.notes | rawHtml" class="notes"></td>
+        </tr>
+    </tbody>
+    <tfoot ng-controller="MedController" tc-col-labels></tfoot>
+</table>
+
+<tc-legend></tc-legend>
+
 <style type="text/css">
     .xray-images img {
         width: {{ 100 / 17 }}%;
@@ -50,40 +71,3 @@
         </div>
     </div>
 </div>
-
-<table class="table table-striped table-hover table-notes container">
-    <thead ng-controller="MedController">
-        <tr>
-            <th style="text-align: right"> Day/Wk </th>
-            <th>        </th>
-            <th style="text-align: center"> Date </th>
-            <th> Clinic </th>
-            <th> Notes  </th>
-        </tr>
-    </thead>
-    <tbody ng-controller="EventsController">
-        <tr
-          ng-repeat="event in events"
-          ng-controller="EventController as E"
-          ng-init="E.init($index, event)"
-          ng-show="event.notes | xRay"
-          >
-            <td ng-include="'partials/days.html'" align="right"></td>
-            <td ng-include="'partials/glyphs.html'"></td>
-            <td ng-bind="event.date" class="event-date"></td>
-            <td ng-include="'partials/clinics.html'"></td>
-            <td ng-bind-html="event.notes | rawHtml" class="notes"></td>
-        </tr>
-    </tbody>
-    <tfoot ng-controller="MedController">
-        <tr>
-            <th style="text-align: right"> Day/Wk </th>
-            <th>        </th>
-            <th> Date   </th>
-            <th> Clinic </th>
-            <th> Notes  </th>
-        </tr>
-    </tfoot>
-</table>
-
-<tc-legend></tc-legend>
