--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -1,22 +1,22 @@
 <p class="page-header"> X-rays </p>
 
-<div class="xray-images">
-    <img class="clickme" title="2014.05.31" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.05.31.jpg">
-    <img class="clickme" title="2014.06.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_1.jpg">
-    <img class="clickme" title="2014.06.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_2.jpg">
-    <img class="clickme" title="2014.06.23" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.23.jpg">
-    <img class="clickme" title="2014.08.01" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.01.jpg">
-    <img class="clickme" title="2014.08.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.20.jpg">
-    <img class="clickme" title="2014.09.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11.jpg">
-    <img class="clickme" title="2014.09.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11_after-op.jpg">
-    <img class="clickme" title="2014.10.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.02.jpg">
-    <img class="clickme" title="2014.10.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11.jpg">
-    <img class="clickme" title="2014.10.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11_side.jpg">
-    <img class="clickme" title="2015.02.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united.jpg">
-    <img class="clickme" title="2015.02.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united_2.jpg">
-    <img class="clickme" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20.jpg">
-    <img class="clickme" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20_.jpg">
-    <img class="clickme" title="2015.05.22" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.05.22.jpg">
+<div id="links">
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.05.31.jpg"                 ><img alt="X-ray" title="2014.05.31" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.05.31.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_1.jpg"               ><img alt="X-ray" title="2014.06.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_1.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_2.jpg"               ><img alt="X-ray" title="2014.06.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.02_2.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.23.jpg"                 ><img alt="X-ray" title="2014.06.23" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.06.23.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.01.jpg"                 ><img alt="X-ray" title="2014.08.01" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.01.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.20.jpg"                 ><img alt="X-ray" title="2014.08.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.08.20.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11.jpg"                 ><img alt="X-ray" title="2014.09.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11_after-op.jpg"        ><img alt="X-ray" title="2014.09.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.09.11_after-op.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.02.jpg"                 ><img alt="X-ray" title="2014.10.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.02.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11.jpg"                 ><img alt="X-ray" title="2014.10.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11_side.jpg"            ><img alt="X-ray" title="2014.10.11" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2014.10.11_side.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united.jpg"  ><img alt="X-ray" title="2015.02.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united_2.jpg"><img alt="X-ray" title="2015.02.02" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.02.02_checkup-united_2.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20.jpg"                 ><img alt="X-ray" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20_.jpg"                ><img alt="X-ray" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20_.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.05.22.jpg"                 ><img alt="X-ray" title="2015.05.22" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.05.22.jpg"></a>
 </div>
 
 <table class="table table-striped table-hover table-notes container">
@@ -41,33 +41,48 @@
 <tc-legend></tc-legend>
 
 <style type="text/css">
-    .xray-images img {
-        width: {{ 100 / 17 }}%;
-        padding: 5px;
+    #links {
         text-align: center;
     }
-    .modal-title, .modal-body {
-        text-align: center;
+    #links img {
+        width: 5%;
+        padding: 5px;
     }
 </style>
 
-<script src="js/xrays.js"></script>
 
-<div id="xrayDialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="xrayModalTitle" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
-                </button>
-                <h4 id="xrayModalTitle" class="modal-title"> X-ray preview </h4>
-            </div>
-            <div class="modal-body">
-                <img id="xrayModalPreview" title="Click to open full-size in a new window." src="">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+<!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls" >
+    <!-- The container for the modal slides -->
+    <div class="slides"></div>
+    <!-- Controls for the borderless lightbox -->
+    <h3 class="title"></h3>
+    <a class="prev">‹</a>
+    <a class="next">›</a>
+    <a class="close">×</a>
+    <a class="play-pause"></a>
+    <ol class="indicator"></ol>
+    <!-- The modal dialog, which will be used to wrap the lightbox content -->
+    <div class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div class="modal-body next"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default pull-left prev">
+                        <i class="glyphicon glyphicon-chevron-left"></i>
+                        Previous
+                    </button>
+                    <button type="button" class="btn btn-primary next">
+                        Next
+                        <i class="glyphicon glyphicon-chevron-right"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
