--- a/app/partials/legend.html
+++ b/app/partials/legend.html
@@ -2,19 +2,12 @@
     <div class="hero-unit">
         <div class="container">
             <p align="center">
+                Visits to clinics:
+                <span class="badge miceli-clinic">M</span> Miceli,
+                <span class="badge other-clinic">O</span> Other;
+                Medication:
                 <span ng-show="observers" class="label label-primary">Zosia observed</span>
                 <span ng-show="observers" class="label label-default">Zosia did not observe</span>
-                Visits to clinics
-                <span class="badge miceli">Miceli</span>:
-                <span class="badge miceli">C</span>Carbon
-                <span class="badge miceli">Z</span>Zosia
-                <span class="badge miceli">A</span>Aga
-                <span class="badge miceli">R</span>Rocio
-                <span class="badge miceli">S</span>Steven
-                <span class="badge marina">Marina</span>:
-                <span class="badge marina">C</span>Carbon
-                <span class="badge marina">Z</span>Zosia
-                <span class="badge marina">S</span>Steven
             </p>
             <p ng-show="extraNotes" class="alert alert-info">
                 <span class="glyphicon glyphicon-hand-right"></span>
