--- a/app/partials/meds.html
+++ b/app/partials/meds.html
@@ -12,7 +12,7 @@
             <td ng-include="'partials/days.html'" align="right"></td>
             <td ng-include="'partials/glyphs.html'"></td>
             <td ng-bind="event.date" class="event-date"></td>
-            <td ng-include="'partials/clinics.html'"></td>
+            <td ng-include="'partials/clinics.html'" class="clinics"></td>
             <td ng-show="!E.hasMeds()" colspan="{{E.meds.length}}}" ng-bind-html="event.notes | rawHtml" class="notes"></td>
             <td ng-show="E.hasMeds()" ng-repeat="i in E.meds_indexes" class="meds">
             <span ng-show="E.hasDosage(i)" title="{{ E.meds[i].name }}">
@@ -29,4 +29,4 @@
     <tfoot ng-controller="MedController" tc-col-labels type="meds"></tfoot>
 </table>
 
-<tc-legend observers="true" extranotes="true"></tc-legend>
+<tc-legend observers extranotes></tc-legend>
