--- a/app/partials/meds.html
+++ b/app/partials/meds.html
@@ -13,14 +13,15 @@
             <td ng-include="'partials/glyphs.html'"></td>
             <td ng-bind="event.date" class="event-date"></td>
             <td ng-include="'partials/clinics.html'" class="clinics"></td>
-            <td ng-show="!E.hasMeds()" colspan="{{E.meds.length}}}" ng-bind-html="event.notes | rawHtml" class="notes"></td>
-            <td ng-show="E.hasMeds()" ng-repeat="i in E.meds_indexes" class="meds">
-                <span ng-show="E.hasDosage(i)" ng-attr-title="{{ E.meds[i].name }}">
+            <td ng-show="!E.hasMeds()" ng-bind-html="event.notes | rawHtml" colspan="{{ E.meds.length }}" class="notes"></td>
+            <td ng-show="E.hasMeds()" ng-repeat="med in E.meds" class="meds">
+                <span>
                     <span
+                      ng-repeat="dose in E.event.meds[ med['id']] track by $index"
+                      ng-bind="abs( dose )"
+                      ng-attr-title="{{ abs( dose ) + ' ' + med.unit + ' ' + med.name }}"
+                      ng-class="{'label-primary': dose > 0, 'label-default': dose < 0}"
                       class="label"
-                      ng-repeat="dose in E.getMed(i) track by $index"
-                      ng-class="{'label-primary':E.observed(i, $index),'label-default':E.unobserved(i, $index)}"
-                      ng-bind="E.med(i, dose)"
                       ></span>
                 </span>
             </td>
