unobfusticate event objects scoping

--- a/app/partials/clinic.html
+++ b/app/partials/clinic.html
@@ -1,4 +1,4 @@
 <span class="badge"
     ng-class="{'miceli-clinic': E.atMiceli(), 'other-clinic': !E.atMiceli()}"
-    ng-bind="E.event.clinic"
+    ng-bind="event.clinic"
 ></span>
