--- a/app/partials/notes.html
+++ b/app/partials/notes.html
@@ -12,7 +12,7 @@
             <td ng-include="'partials/days.html'" align="right"></td>
             <td ng-include="'partials/glyphs.html'"></td>
             <td ng-bind="event.date" class="event-date"></td>
-            <td ng-include="'partials/clinics.html'" class="clinics"></td>
+            <td ng-include="'partials/clinic.html'" class="clinics"></td>
             <td ng-bind-html="event.notes | rawHtml" class="notes"></td>
         </tr>
     </tbody>
