--- a/app/partials/meds.html
+++ b/app/partials/meds.html
@@ -1,7 +1,7 @@
 <p class="page-header"> Meds </p>
 
-<table class="table table-striped table-hover">
-    <thead ng-controller="MedController" tc-col-labels type="meds-h"></thead>
+<table ng-controller="MedController" class="table table-striped table-hover">
+    <thead tc-col-labels type="meds-h"></thead>
     <tbody ng-controller="EventsController">
         <tr
           ng-repeat="event in events"
@@ -12,11 +12,11 @@
             <td ng-include="'partials/days.html'" align="right"></td>
             <td ng-include="'partials/glyphs.html'"></td>
             <td ng-bind="event.date" class="event-date"></td>
-            <td ng-include="'partials/clinics.html'" class="clinics"></td>
-            <td ng-show="!E.hasMeds()" ng-bind-html="event.notes | rawHtml" colspan="{{ E.meds.length }}" class="notes"></td>
-            <td ng-show="E.hasMeds()" ng-repeat="med in E.meds" class="meds">
+            <td ng-include="'partials/clinic.html'" class="clinics"></td>
+            <td ng-show="!E.hasMeds()" ng-bind-html="event.notes | rawHtml" colspan="{{ meds.length }}" class="notes"></td>
+            <td ng-show="E.hasMeds()" ng-repeat="med in meds" class="meds">
                 <span
-                  ng-repeat="dose in E.event.meds[ med['id']] track by $index"
+                  ng-repeat="dose in event.meds[ med['id']] track by $index"
                   ng-bind="abs( dose )"
                   ng-attr-title="{{ abs( dose ) + ' ' + med.unit + ' ' + med.name }}"
                   ng-class="{'label-primary': dose > 0, 'label-default': dose < 0}"
@@ -25,7 +25,7 @@
             </td>
         </tr>
     </tbody>
-    <tfoot ng-controller="MedController" tc-col-labels type="meds-f"></tfoot>
+    <tfoot tc-col-labels type="meds-f"></tfoot>
 </table>
 
 <tc-legend observers extranotes></tc-legend>
