simplify event controller

--- a/app/partials/clinic.html
+++ b/app/partials/clinic.html
@@ -1,4 +1,4 @@
 <span class="badge"
-    ng-class="{'miceli-clinic': E.atMiceli(), 'other-clinic': !E.atMiceli()}"
-    ng-bind="event.clinic"
+	ng-bind="event.clinic"
+	ng-class="{'miceli-clinic': event.clinic === 'M'}"
 ></span>
