--- a/app/partials/legend.html
+++ b/app/partials/legend.html
@@ -4,7 +4,7 @@
             <p align="center">
                 Visits to clinics:
                 <span class="badge miceli-clinic">M</span> Miceli,
-                <span class="badge other-clinic">O</span> Other;
+                <span class="badge">O</span> Other;
                 Medication:
                 <span ng-show="observers" class="label label-primary">Zosia observed</span>
                 <span ng-show="observers" class="label label-default">Zosia did not observe</span>
