--- a/app/partials/days.html
+++ b/app/partials/days.html
@@ -1,3 +1,3 @@
-<span ng-bind="E.prpday" ng-show="E.prpday > 0" title="{{ E.prpday }} Days after PrP surgury"     class="badge"></span>
-<span ng-bind="E.day"    ng-show="E.day > 0"    title="{{ E.day    }} Days after initial surgury" class="badge"></span>
-<span ng-bind="E.week"   ng-show="E.day > 0"    title="Week {{ E.week }} after initial surgury"   class="badge"></span>
+<span ng-bind="event.prpday" ng-show="event.prpday > 0" title="{{ event.prpday }} Days after PrP surgury"     class="badge"></span>
+<span ng-bind="event.day"    ng-show="event.day > 0"    title="{{ event.day    }} Days after initial surgury" class="badge"></span>
+<span ng-bind="event.week"   ng-show="event.day > 0"    title="Week {{ event.week }} after initial surgury"   class="badge"></span>
