--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -17,6 +17,8 @@
     <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20.jpg"                 ><img alt="X-ray" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20.jpg"></a>
     <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20_.jpg"                ><img alt="X-ray" title="2015.04.20" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.04.20_.jpg"></a>
     <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.05.22.jpg"                 ><img alt="X-ray" title="2015.05.22" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-2015.05.22.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-20150628-WA0000.jpg"            ><img alt="X-ray" title="2015.06.28" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-20150628-WA0000.jpg"></a>
+    <a data-gallery href="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-20150628-WA0001.jpg"            ><img alt="X-ray" title="2015.06.28" src="http://centerstar.org/carbon-images/xrays/Carbon-radiografia-20150628-WA0001.jpg"></a>
 </div>
 
 <table class="table table-striped table-hover table-notes container">
