add clinic & notes

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -83,6 +83,9 @@
 .miceli-clinic {
   background-color: green;
 }
+.beremiz-clinic {
+  background-color: blue;
+}
 .other-clinic {
   background-color: cyan;
 }
