--- a/app/partials/legend.html
+++ b/app/partials/legend.html
@@ -4,6 +4,7 @@
             <p align="center">
                 Visits to clinics:
                 <span class="badge miceli-clinic">M</span> Miceli,
+                <span class="badge beremiz-clinic">B</span> Beremiz,
                 <span class="badge">O</span> Other;
                 Medication:
                 <span ng-show="observers" class="label label-primary">Zosia observed</span>
