--- a/app/css/app.css
+++ b/app/css/app.css
@@ -86,6 +86,9 @@
 .beremiz-clinic {
   background-color: blue;
 }
+.fernanda-clinic {
+  background-color: purple;
+}
 .other-clinic {
   background-color: cyan;
 }
