--- a/app/partials/clinic.html
+++ b/app/partials/clinic.html
@@ -1,4 +1,4 @@
 <span class="badge"
 	ng-bind="event.clinic"
-	ng-class="{'miceli-clinic': event.clinic === 'M', 'beremiz-clinic': event.clinic === 'B'}"
+	ng-class="{'miceli-clinic': event.clinic === 'M', 'beremiz-clinic': event.clinic === 'B', 'fernanda-clinic': event.clinic === 'F'}"
 ></span>
