--- a/app/partials/legend.html
+++ b/app/partials/legend.html
@@ -6,6 +6,7 @@
                     Visits to clinics:
                     <span class="badge miceli-clinic">M</span> Miceli,
                     <span class="badge beremiz-clinic">B</span> Beremiz,
+                    <span class="badge fernanda-clinic">F</span> Fernanda,
                     <span class="badge">O</span> Other
                 </span>
                 <span ng-show="observers">
