--- a/app/partials/glyphs.html
+++ b/app/partials/glyphs.html
@@ -1,2 +1,2 @@
 <span class="glyphicon lyphicon glyphicon-list-alt" ng-show="event.notes" title="Note for this date"></span>
-<span class="glyphicon lyphicon glyphicon-picture" ng-show="event.notes | xRay" title="X-ray for this date"></span>
+<span class="glyphicon lyphicon glyphicon-picture" ng-show="event.xrays" title="X-ray for this date"></span>
