--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -2,10 +2,10 @@
 
 <table class="table table-striped table-hover table-notes container">
     <thead ng-controller="MedController" tc-col-labels type="xrays"></thead>
+    <!-- We still get a single 404 because Blueimp gallery loads "too early"?: Failed to load resource: the server responded with a status of 404 (Not Found) http://localhost:8000/app/%7B%7B%20event.xrays%20%7D%7D (http://localhost:8000/app/{{ event.xrays }}) -->
     <tbody ng-controller="EventsController">
         <tr
-          ng-repeat="event in events"
-          ng-show="event.xrays"
+          ng-repeat="event in events | xRayEvents"
           >
             <td ng-include="'partials/days.html'" align="right"></td>
             <td ng-bind="event.date" class="event-date"></td>
